tests/invalid/duplicate_entity.intent
module DuplicateTest

entity User {
  id: UUID
  name: String
}

entity User {
  id: UUID
  email: Email
}
